--- a/app/bundles/FormBundle/Assets/css/form.css
+++ b/app/bundles/FormBundle/Assets/css/form.css
@@ -1,4 +1,13 @@
 /* FormBundle */
+
+.panel2 {
+    border: 1px solid #ebedf0;
+    -webkit-box-shadow: 0px 1px 1px #f3f3f3;
+    box-shadow: 0px 1px 1px #f3f3f3;
+    margin-left:25px;
+    margin-bottom:25px;
+}
+
 .form-submitaction-group-header {
     font-size: 1.1em;
     font-weight: bold;
