--- a/app/bundles/CoreBundle/Assets/css/libraries/libraries.css
+++ b/app/bundles/CoreBundle/Assets/css/libraries/libraries.css
@@ -3358,8 +3358,8 @@ fieldset[disabled] .btn-info.focus {
 }
 .btn-warning {
   color: #fff;
-  background-color: #FDB933;
-  border-color: #FDB933;
+  background-color: #c2d100;
+  border-color: #c2d100;
 }
 .btn-warning:focus,
 .btn-warning.focus {
@@ -3406,11 +3406,11 @@ fieldset[disabled] .btn-warning:focus,
 .btn-warning.disabled.focus,
 .btn-warning[disabled].focus,
 fieldset[disabled] .btn-warning.focus {
-  background-color: #FDB933;
-  border-color: #FDB933;
+  background-color: #c2d100;
+  border-color: #c2d100;
 }
 .btn-warning .badge {
-  color: #FDB933;
+  color: #c2d100;
   background-color: #fff;
 }
 .btn-danger {
@@ -4968,7 +4968,7 @@ a.label:focus {
   background-color: #2a8d91;
 }
 .label-warning {
-  background-color: #FDB933;
+  background-color: #c2d100;
 }
 .label-warning[href]:hover,
 .label-warning[href]:focus {
@@ -5244,7 +5244,7 @@ a.thumbnail.active {
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
 }
 .progress-bar-warning {
-  background-color: #FDB933;
+  background-color: #c2d100;
 }
 .progress-striped .progress-bar-warning {
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -5835,14 +5835,14 @@ button.list-group-item-danger.active:focus {
 }
 .panel-warning > .panel-heading {
   color: #fff;
-  background-color: #FDB933;
+  background-color: #c2d100;
   border-color: rgba(0, 0, 0, 0.03);
 }
 .panel-warning > .panel-heading + .panel-collapse > .panel-body {
   border-top-color: rgba(0, 0, 0, 0.03);
 }
 .panel-warning > .panel-heading .badge {
-  color: #FDB933;
+  color: #c2d100;
   background-color: #fff;
 }
 .panel-warning > .panel-footer + .panel-collapse > .panel-body {
@@ -9793,7 +9793,7 @@ button.close {
   overflow-x: hidden;
 }
 .ms-container .ms-list.ms-focus {
-  border-color: #4e5e9e;
+  border-color: #235f6d;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), rgba(78, 94, 158, 0.6);
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(78, 94, 158, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(78, 94, 158, 0.6);
@@ -9826,7 +9826,7 @@ button.close {
   cursor: pointer;
   color: #fff;
   text-decoration: none;
-  background-color: #4e5e9e;
+  background-color: #235f6d;
 }
 .ms-container .ms-selectable li.disabled,
 .ms-container .ms-selection li.disabled {
