modificati i colori nei file less

--- a/app/bundles/CoreBundle/Assets/css/libraries/bootstrap/bootstrap-mautic-custom-variables.less
+++ b/app/bundles/CoreBundle/Assets/css/libraries/bootstrap/bootstrap-mautic-custom-variables.less
@@ -7,7 +7,7 @@
 @brand-primary:         #4E5D9D;
 @brand-success:         #00B49C;
 @brand-info:            #35B4B9;
-@brand-warning:         #FDB933;
+@brand-warning:         #c2d100;
 @brand-danger:          #F86B4F;
 
 @brand-facebook:        #3b5998;
