--- a/app/bundles/CoreBundle/Assets/css/app/less/custom.less
+++ b/app/bundles/CoreBundle/Assets/css/app/less/custom.less
@@ -194,7 +194,7 @@ body.noscroll {
 }
 
 .theme-selected {
-  border: 1px solid #4e5e9e;
+  border: 1px solid #235f6d;
   -webkit-box-shadow: 0px 0px 40px #f3f3f3;
   box-shadow: 0px 0px 40px #f3f3f3;
 }
