Cambiato colore nei file less

--- a/app/bundles/CoreBundle/Assets/css/app/less/custom.less
+++ b/app/bundles/CoreBundle/Assets/css/app/less/custom.less
@@ -206,7 +206,7 @@ body.noscroll {
 }
 
 .fr-toolbar {
-  border-top: 2px solid #4e5d9d;
+  border-top: 2px solid #003b4a;
 }
 .modal-body-content iframe.fr-iframe {
   min-height:300px;
