Cambiato font size copyright e rimosso margine paragrafo

--- a/app/bundles/UserBundle/Assets/css/user.css
+++ b/app/bundles/UserBundle/Assets/css/user.css
@@ -58,9 +58,11 @@ span.input-group-addon i.fa {
 
 .login-page .text-copyright {
     color: #E0E0E0;
+    font-size: 8px;
 }
 .login-page p {
     color: #9E9E9E;
     font-size: 12px;
     line-height: 14px;
+    margin: 0;
 }
