Rimosso border radius dal pannello e cambiato il colore

--- a/app/bundles/UserBundle/Assets/css/user.css
+++ b/app/bundles/UserBundle/Assets/css/user.css
@@ -48,6 +48,11 @@ span.input-group-addon i.fa {
     overflow-y: hidden;
 }
 
+.login-page .panel {
+    border-radius: 0;
+    border-color: #E0E0E0;
+}
+
 .login-page .panel-body {
     padding-top: 32px;
 }
